--- a/source/_posts/模具零件名称及作用.md
+++ b/source/_posts/模具零件名称及作用.md
@@ -2,6 +2,50 @@
 title: 模具零件名称及作用
 typora-root-url: ../
 date: 2023-03-20 17:01:42
-tags:
+tags: 
+ - 摸具零件
 categories:
+ - 模具设计
 ---
+
+
+
+## 模芯
+
+**模芯部分分为：**前模仁、后模仁、镶件、镶针等
+
+
+
+## 滑块机构
+
+**组成:** 
+
+**运动原理:** 前后模部分打开，斜导柱驱动滑块侧向抽芯，斜导柱完全脱离滑块座厚限位螺丝限死，合模时斜导柱驱动滑块回位，最终是靠铲机驱动滑块完全回位
+
+
+
+## 斜顶机构
+
+**组成:** 斜顶、导向块、斜顶座
+
+**运动原理:** 斜顶机构由斜顶、导向块、斜顶座组成，斜顶机构运动的力是注塑机顶棍推动顶针板，使得斜顶与斜顶做相互滑动，斜顶顶出产品同时侧向脱倒扣
+
+
+
+
+
+## 浇注系统
+
+
+
+## 冷却系统
+
+
+
+## 其他标准件
+
+### 支撑柱
+
+### 限位柱
+
+### 垃圾钉
